objects/SFDC_Industry_Assessment_Question_Branch__mdt.object
<CustomObject>
    <fields>
        <fullName>Controlling_Question_Value__c</fullName>
        <label>Controlling Question Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controlling_Question__c</fullName>
        <label>Controlling Question</label>
        <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
        <relationshipLabel>Controlling Question</relationshipLabel>
        <relationshipName>SFDC_Industry_Assessment_Question_Branch</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Following_Question__c</fullName>
        <label>Following Question</label>
        <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
        <relationshipLabel>Following Question</relationshipLabel>
        <relationshipName>Following_Question</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <referenceTo>SFDC_Industry__mdt</referenceTo>
        <relationshipLabel>SFDC Industry Assessment Question Branch</relationshipLabel>
        <relationshipName>SFDC_Industry_Assessment_Question_Branch</relationshipName>
        <type>MetadataRelationship</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Default_Outcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Outcome</label>
        <type>Checkbox</type>
    </fields>
    <label>SFDC Industry Assessment Question Branch</label>
    <pluralLabel>SFDC Industry Assessment Question Branch</pluralLabel>
    <validationRules>
        <fullName>Starting_Question_and_Industry_Both_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Industry__c)) &amp;&amp;  NOT(ISBLANK(Controlling_Question__c))</errorConditionFormula>
        <errorMessage>A Controlling Question can not be set when Industry is defined.</errorMessage>
    </validationRules>
</CustomObject>